--- a/app/views/templates/startup_renderer.html
+++ b/app/views/templates/startup_renderer.html
@@ -13,7 +13,7 @@
 </td>
 <td style="vertical-align: top; padding-top: 25px; height: 70px;">
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
-      <span class="btn btn-xs btn-alt btn-info"><i class="fa fa-code"></i>
+      <span class="btn btn-xs btn-alt btn-default"><i class="fa fa-code"></i>
       </span>
     </li>
   <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
@@ -40,7 +40,7 @@
   </td>
   <td style="vertical-align: top; padding-top: 25px; height: 70px;">
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
-      <span class="btn btn-xs btn-alt btn-info"><i class="fa fa-wrench"></i>
+      <span class="btn btn-xs btn-alt btn-default"><i class="fa fa-wrench"></i>
       </span>
     </li>
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
@@ -67,7 +67,7 @@
 </td>
 <td style="vertical-align: top; padding-top: 25px; height: 70px;">
   <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
-    <span class="btn btn-xs btn-alt btn-info"><i class="fa fa-code"></i>
+    <span class="btn btn-xs btn-alt btn-default"><i class="fa fa-code"></i>
       </span>
   </li>
   <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
@@ -95,7 +95,7 @@
   </td>
   <td style="vertical-align: top; padding-top: 25px; height: 70px;">
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
-    <span class="btn btn-xs btn-alt btn-info"><i class="fa fa-flask"></i>
+    <span class="btn btn-xs btn-alt btn-default"><i class="fa fa-flask"></i>
       </span>
     </li>
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
@@ -122,7 +122,7 @@
   </td>
   <td style="vertical-align: top; padding-top: 25px; height: 70px;">
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
-    <span class="btn btn-xs btn-alt btn-info"><i class="fa fa-code"></i>
+    <span class="btn btn-xs btn-alt btn-default"><i class="fa fa-code"></i>
       </span>
     </li>
     <li style="list-style: none; display: inline; float: right; padding-left: 5px;">
