--- a/app/views/network.html
+++ b/app/views/network.html
@@ -22,22 +22,21 @@
             <div class="col-xs-4 col-sm-3">
               <h2>
                 <strong style="color: white;">98</strong><br>
-                <small><i class="fa fa-graduation-cap"></i> Advisors</small>
-              </h2>
-            </div>
-            <div class="col-xs-4 col-sm-3">
-              <h2>
-                <strong style="color: white;">27</strong><br>
-                <small><i class="fa fa-leaf"></i> Investors</small>
+                <small><i class="fa fa-flag"></i> People</small>
               </h2>
             </div>
             <div class="col-xs-4 col-sm-3">
               <h2>
                 <strong style="color: white;">2.4M</strong><br>
-                <small><i class="fa fa-dollar"></i> Raised</small>
+                <small><i class="fa fa-dollar"></i> Invested</small>
               </h2>
             </div>
-
+            <div class="col-xs-4 col-sm-3">
+              <h2>
+                <strong style="color: white;">16</strong><br>
+                <small><i class="fa fa-map-marker"></i> Events</small>
+              </h2>
+            </div>
           </div>
         </div>
         <!-- END Top Stats -->
@@ -52,7 +51,7 @@
     <div class="block">
       <!-- Messages List Title -->
       <div class="block-title" style="margin-bottom: 0;">
-        <h2>Popular <strong>Startups</strong></h2>
+        <h2>Recent <strong>Alumni</strong></h2>
       </div>
       <!-- END Messages List Title -->
 
@@ -80,7 +79,7 @@
       <div class="table-responsive" style="margin: 0 -10px;">
         <table class="table table-vcenter">
           <tbody>
-          <tr ng-repeat="item in users.results" ng-if="$index < 5" ng-include="'views/templates/people_renderer.html'"></tr>
+          <tr ng-repeat="item in users.results" ng-if="$index < 3" ng-include="'views/templates/network_people_renderer.html'"></tr>
           </tbody>
         </table>
       </div>
@@ -94,19 +93,85 @@
     <div class="block">
       <!-- Messages List Title -->
       <div class="block-title" style="margin-bottom: 0;">
-        <h2>Recent <strong>Fundraising</strong></h2>
+        <h2>Latest <strong>Investments</strong></h2>
       </div>
       <!-- END Messages List Title -->
 
       <!-- Messages List Content -->
       <div class="table-responsive" style="margin: 0 -10px;">
         <table class="table table-vcenter">
-          <tbody ng-include="'views/templates/raised_renderer.html'">
+          <tbody ng-include="'views/templates/invest_renderer.html'">
           </tbody>
         </table>
       </div>
       <div class="text-center" style="padding-bottom:15px;"><a href="javascript:void(0)">Show all..</a></div>
       <!-- END Messages List Content -->
+    </div>
+  </div>
+
+  <div class="col-md-6 col-lg-6" ng-controller="CalendarController">
+    <div class="panel panel-inverse calendar">
+      <div class="panel-heading">
+
+        <h4>Event Calendar</h4>
+        <div class="options">
+
+        </div>
+      </div>
+      <div class="panel-body">
+
+        <div data-full-calendar="{ events: demoEvents }"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6 col-lg-6">
+    <div class="panel panel-inverse">
+      <div class="panel-heading">
+
+        <h4>Resources</h4>
+
+      </div>
+      <div class="panel-body">
+        <div class="widget-main">
+          <div class="list-group remove-margin">
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>60</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-desktop fa-fw"></i> Web Design</h4>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>19</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-picture-o fa-fw"></i> Creative Studio</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>35</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-comments fa-fw"></i> Digital Marketing</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>15</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-briefcase fa-fw"></i> Accounting Services</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>32</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-bar-chart-o fa-fw"></i> Sales Solutions</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>13</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-gavel fa-fw"></i> Legal Support</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+            <a href="javascript:void(0)" class="list-group-item">
+              <span class="pull-right"><strong>3</strong></span>
+              <h4 class="list-group-item-heading remove-margin"><i class="fa fa-tachometer fa-fw"></i> Accelerator Services</h4>
+              <p class="list-group-item-text"></p>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
