--- a/app/views/network.html
+++ b/app/views/network.html
@@ -164,7 +164,7 @@
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-gavel fa-fw"></i> Legal Support</h4>
               <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="javascript:void(0)" class="list-group-item" style="background: rgb(238, 255, 217);">
               <span class="pull-right"><strong>3</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-tachometer fa-fw"></i> Accelerator Services</h4>
               <p class="list-group-item-text"></p>
