--- a/app/views/network.html
+++ b/app/views/network.html
@@ -135,39 +135,33 @@
       <div class="panel-body">
         <div class="widget-main">
           <div class="list-group remove-margin">
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>60</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-desktop fa-fw"></i> Web Design</h4>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>19</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-picture-o fa-fw"></i> Creative Studio</h4>
-              <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>35</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-comments fa-fw"></i> Digital Marketing</h4>
-              <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>15</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-briefcase fa-fw"></i> Accounting Services</h4>
-              <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>32</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-bar-chart-o fa-fw"></i> Sales Solutions</h4>
-              <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item">
+            <a href="/network/resources" class="list-group-item">
               <span class="pull-right"><strong>13</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-gavel fa-fw"></i> Legal Support</h4>
-              <p class="list-group-item-text"></p>
             </a>
-            <a href="javascript:void(0)" class="list-group-item" style="background: rgb(238, 255, 217);">
+            <a href="/network/resources" class="list-group-item" style="background: rgb(238, 255, 217);">
               <span class="pull-right"><strong>3</strong></span>
               <h4 class="list-group-item-heading remove-margin"><i class="fa fa-tachometer fa-fw"></i> Accelerator Services</h4>
-              <p class="list-group-item-text"></p>
             </a>
           </div>
         </div>
