--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,8 +1,10 @@
 <div class="verticalcenter" ng-controller="LoginCtrl">
-	<a href="/"><img src="assets/img/logo-big.png" alt="Logo" class="brand" style="margin-bottom: -50px; width: 100%;"/></a>
-	<h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
+	<a href="/"><img src="../assets/img/SC_Logo.png" alt="Logo" class="brand" style="margin-bottom: -30px; width: 350px;"/></a>
+
 	<div class="panel panel-primary">
+
 		<div class="panel-body" style="padding: 15px; border-left: 1px solid #e1e3e8; border-right: 1px solid #e1e3e8; border-bottom: 1px solid #e1e3e8; background-color: #FFF;">
+      <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
 			<h4 class="text-center" style="margin-bottom: 13px;">Log in using &nbsp;<a class="btn btn-info" ng-click="authenticate('linkedin')">Linkedin</a></h4>
             <div ng-show="global.alert">
                 <alert type="{{global.alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="global.alert.msg | safe_html"></span></alert>
