--- a/app/assets/less/topnav.less
+++ b/app/assets/less/topnav.less
@@ -235,9 +235,9 @@ header.navbar {margin-bottom:0px; border-top: 2px solid #569833; border-bottom: 
 }
 
 #brand_logo {
-	background: #f3f4f6 url('/public/plant_40h.png') no-repeat fixed;
-	width: 40px;
-	height: 40px;
+    background: #f3f4f6 url(/public/favicon.png) no-repeat fixed;
+    width: 32px;
+    height: 32px;
 	float: left;
 }
 
