--- a/app/assets/less/topnav.less
+++ b/app/assets/less/topnav.less
@@ -263,8 +263,9 @@ header.navbar {margin-bottom:0px; border-top: 2px solid #569833; border-bottom: 
 			padding: 0 10px 0 37px;
 			border-radius:0px;
 			min-height: 40px;
-			line-height: 19px;
-			width: 100%;
+			line-height: 30px;
+            font-size: 15px;
+			width: 169px;
 			.placeholder(fade(@navbar-default-link-hover-color,40%));
 		
 			&:focus {
