--- a/app/frontend/ghost/content/themes/nuevo/post.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/post.hbs
@@ -83,7 +83,7 @@
 			<div id="disqus_thread" class="boxed-content"></div>
 			<script type="text/javascript">
 				/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-				var disqus_shortname = 'ghost-nuevo'; // required: replace example with your forum shortname
+				var disqus_shortname = 'startupcommunity'; // required: replace example with your forum shortname
 		
 				/* * * DON'T EDIT BELOW THIS LINE * * */
 				(function() {
