--- a/app/frontend/ghost/content/themes/nuevo/index.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/index.hbs
@@ -16,6 +16,7 @@
 				{{#foreach posts columns=2}}
 				
 					<article class="ep-one-half animated opacity50 {{post_class}} {{#if @rowEnd}}ep-last{{/if}}" data-animation="fadeIn" data-appear-top-offset="-200">
+						<hr class="postline">
 						<span class="arrow"></span>
 						<header>
 							<a href="{{url}}" class="thumb">
