--- a/app/frontend/ghost/content/themes/nuevo/assets/css/main-color.css
+++ b/app/frontend/ghost/content/themes/nuevo/assets/css/main-color.css
@@ -8,12 +8,15 @@ div.home div.timeline article:hover span.arrow,
 	background: #82bc4b;
 }
 
-#footer,
+#footer {
+	background: none;
+}
+
 div.single div.spine,
 div.single article header div.meta time,
 div.single article footer section.share a,
 nav.mobile{
-	background: none;
+	background: #82bc4b;
 }
 
 div.home div.timeline article span.arrow,
@@ -34,7 +37,11 @@ section.author h4 a,
 div.map h3.location i.fa,
 div.single article footer section.tags time,
 div.single article footer section.tags span{
-	color: #82bc4b;
+	color: #76A33D;
+}
+
+div.home div.timeline article {
+	border: 1px solid #ddd;
 }
 
 /* @end */
