--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -19,6 +19,7 @@
 
 {{! Styles'n'Scripts }}
 <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quicksand" >
 <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}">
