updated logo link on blog

--- a/app/frontend/ghost/content/themes/nuevo/partials/header.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/partials/header.hbs
@@ -2,7 +2,7 @@
 <header id="header" class="center">
 	<hgroup>
 		{{#if @blog.logo}}
-			<h1 class="logo" ><a href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a></h1>
+			<h1 class="logo" ><a href="https://startupcommunity.org"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a></h1>
 		{{else}}
 			<h1 class="logo"><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
 		{{/if}}
