changed to investor and founder

--- a/app/views/people.html
+++ b/app/views/people.html
@@ -49,9 +49,9 @@
                 <li>
                   <hr>
                 </li>
-                <li ng-class="{'active':selectedRole.indexOf('Leader') >= 0}" ng-click="filterRole('Leader')">
+                <li ng-class="{'active':selectedRole.indexOf('Founder') >= 0}" ng-click="filterRole('Founder')">
                     <a href="javascript:void(0)">
-                        <i class="fa fa-flag text-danger"></i> <strong>Leaders</strong>
+                        <i class="fa fa-flag text-danger"></i> <strong>Founders</strong>
                     </a>
                 </li>
                 <li ng-class="{'active':selectedRole.indexOf('Advisor') >= 0}" ng-click="filterRole('Advisor')">
@@ -59,9 +59,9 @@
                         <i class="fa fa-graduation-cap text-info"></i> <strong>Advisors</strong>
                     </a>
                 </li>
-                <li ng-class="{'active':selectedRole.indexOf('Member') >= 0}" ng-click="filterRole('Member')">
+                <li ng-class="{'active':selectedRole.indexOf('Investor') >= 0}" ng-click="filterRole('Investor')">
                     <a href="javascript:void(0)">
-                        <i class="fa fa-leaf text-success"></i> <strong>Members</strong>
+                        <i class="fa fa-leaf text-success"></i> <strong>Investors</strong>
                     </a>
                 </li>
             </ul>
