--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -19,7 +19,7 @@
 
 {{! Styles'n'Scripts }}
 <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quicksand" >
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" >
 <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}">
@@ -29,7 +29,7 @@
 <link rel="stylesheet" type="text/css" href="{{asset "js/fancybox/helpers/jquery.fancybox-buttons.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/prettify-bootstrap.css"}}">
 <!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 {{ghost_head}}
 
@@ -63,6 +63,7 @@
 	<script type="text/javascript" src="{{asset "js/google-code-prettify/prettify.js"}}"></script>
 	<script type="text/javascript" src="{{asset "js/fancybox/jquery.fancybox.pack.js"}}"></script>
 	<script type="text/javascript" src="{{asset "js/fancybox/helpers/jquery.fancybox-buttons.js"}}"></script>
+  <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     <script type="text/javascript" src="{{asset "js/global.js"}}"></script>
 </body>
 </html>
